--- a/assets/scss/home_1/_banner.scss
+++ b/assets/scss/home_1/_banner.scss
@@ -4,11 +4,11 @@
 		&:after {
 			top: 0;
 			left: 0;
-			width: 100%;
+			width: 50%;
 			height: 100%;
 			content: '';
 			position: absolute;
-			background-color: rgba(255, 255, 255, 0.5);
+			background: linear-gradient(90deg, rgba(255, 255, 255, 0.96) 0%, rgba(255, 255, 255, 0) 100%);
 		}
 	}
 	.bt-banner-img {
@@ -56,6 +56,7 @@
 		position: absolute;
 		background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%);
 		@media #{$md,$sm,$xs} {
+			top: 0;
 			height: 100%;
 		}
 	}
