--- a/assets/scss/home_1/_contact.scss
+++ b/assets/scss/home_1/_contact.scss
@@ -3,10 +3,10 @@
 	overflow: hidden;
 	background-color: #E7E7E7;
 	.contact-img {
-		bottom: 0;
 		opacity: .7;
 		z-index: -1;
 		left: 110px;
+		bottom: 48px;
 	}
 	.contact-pattern {
 		left: 0;
