--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -61,7 +61,7 @@
 /*----------------------------------------------------*/
 @import "home_1/get-in-touch";
 /*---------------------------------------------------- */
-/******* HOME PAGE 1 *******/
+/******* HOME PAGE 2 *******/
 /*Service Section*/
 /*----------------------------------------------------*/
 @import "home_2/service";
@@ -78,6 +78,7 @@
 /*----------------------------------------------------*/
 @import "home_2/blog";
 /*---------------------------------------------------- */
+/******* HOME PAGE 3 *******/
 /*Banner Section*/
 /*----------------------------------------------------*/
 @import "home_3/banner";
@@ -91,7 +92,15 @@
 @import "home_3/get-in-touch";
 /*---------------------------------------------------- */
 
-
+/******* Inner Pages *******/
+/*Breadcrumb*/
+/*----------------------------------------------------*/
+@import "inner_page/breadcrumb";
+/*---------------------------------------------------- */
+/*About Page*/
+/*----------------------------------------------------*/
+@import "inner_page/about-page";
+/*---------------------------------------------------- */
 /*Footer Section*/
 /*----------------------------------------------------*/
 @import "footer";
