--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -101,6 +101,10 @@
 /*----------------------------------------------------*/
 @import "inner_page/about-page";
 /*---------------------------------------------------- */
+/*Faq Page*/
+/*----------------------------------------------------*/
+@import "inner_page/faq-page";
+/*---------------------------------------------------- */
 /*Footer Section*/
 /*----------------------------------------------------*/
 @import "footer";
