--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6373,6 +6373,9 @@ select:visited {
 .vt-about-mission-vission-item p {
   padding-bottom: 25px;
 }
+.vt-about-mission-vission-item.ver_2 h3 {
+  max-width: 400px;
+}
 
 .vt-about-gallery-section {
   overflow: hidden;
@@ -6386,6 +6389,16 @@ select:visited {
 }
 .vt-about-gallery-section .vt-testi-slider-nav .vt-testi-next {
   right: 26%;
+}
+.vt-about-gallery-section .vt-testi-slider-nav .vt-testi-prev.ver_2 {
+  left: 20px;
+}
+.vt-about-gallery-section .vt-testi-slider-nav .vt-testi-next.ver_2 {
+  right: 20px;
+}
+.vt-about-gallery-section.ver_2 .vt-testimonial-slider {
+  width: 120%;
+  margin-left: -10%;
 }
 
 .about-gallery-img img {
@@ -6460,6 +6473,294 @@ select:visited {
   .vt-about-why-choose-text {
     width: 100%;
   }
+}
+
+.vt-about-career-content .vt-section-title {
+  margin: 0 auto;
+  max-width: 592px;
+}
+
+.vt-current-opening-section {
+  padding-top: 240px;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-current-opening-section {
+    padding-top: 120px;
+  }
+}
+.vt-current-opening-section .vt-section-title {
+  max-width: 800px;
+}
+
+.vt-current-opening-content {
+  width: 100%;
+  max-width: 600px;
+  padding-left: 56px;
+  position: relative;
+}
+.vt-current-opening-content:before {
+  top: 0;
+  left: 0;
+  width: 1px;
+  height: 100%;
+  content: "";
+  position: absolute;
+  background-color: var(--vt-title-color);
+}
+@media (max-width: 480px) {
+  .vt-current-opening-content:before {
+    display: none;
+  }
+}
+@media (max-width: 480px) {
+  .vt-current-opening-content {
+    padding-left: 0;
+  }
+}
+
+.vt-current-opening-item {
+  margin-bottom: 42px;
+}
+.vt-current-opening-item:last-child {
+  margin-bottom: 0;
+}
+.vt-current-opening-item h3 {
+  width: 85%;
+  color: #5D5D5D;
+  line-height: 1;
+  font-size: 32px;
+  padding-bottom: 8px;
+  letter-spacing: -1px;
+  font-family: var(--vt-body-font);
+}
+@media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-current-opening-item h3 {
+    font-size: 26px;
+  }
+}
+.vt-current-opening-item h3 a {
+  position: relative;
+  display: inline-block;
+}
+.vt-current-opening-item h3 a:before {
+  left: 0;
+  right: 0;
+  height: 2px;
+  content: "";
+  width: 0%;
+  bottom: -5px;
+  margin: 0 auto;
+  position: absolute;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+  background-color: var(--vt-title-color);
+}
+.vt-current-opening-item span {
+  line-height: 1;
+}
+.vt-current-opening-item .item-arrow {
+  top: 50%;
+  right: 0;
+  position: absolute;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+.vt-current-opening-item .item-arrow a {
+  width: 40px;
+  height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.vt-current-opening-item:hover h3 a:before {
+  width: 100%;
+}
+.vt-current-opening-item:hover .item-arrow a {
+  color: #C9F7CA;
+  background-color: var(--vt-title-color);
+}
+
+.vt-growth-section .vt-section-title {
+  max-width: 936px;
+}
+.vt-growth-section .vt-section-title .subtitle {
+  background-color: #fff;
+  border: 1px solid #DFE1E5;
+}
+.vt-growth-section .vt-vertical-shape-2 {
+  bottom: 6px;
+}
+.vt-growth-section .vt-vertical-shape-2 span {
+  background-color: #fff;
+}
+.vt-growth-section .vt-vertical-shape-2 span:nth-child(1) {
+  margin-bottom: 15px;
+}
+
+.vt-growth-content {
+  gap: 30px 64px;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-growth-content {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding: 0px 15px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.vt-growth-img-wrap {
+  gap: 32px;
+  width: 70%;
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .vt-growth-img-wrap {
+    width: 50%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-growth-img-wrap {
+    width: 100%;
+  }
+}
+@media (max-width: 480px) {
+  .vt-growth-img-wrap {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+.vt-growth-img-wrap .item-img-video {
+  width: 50%;
+}
+@media (max-width: 480px) {
+  .vt-growth-img-wrap .item-img-video {
+    width: 100%;
+  }
+}
+.vt-growth-img-wrap .item-img-video .inner-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.vt-growth-img-wrap .item-img-video .play-icon {
+  left: 0;
+  right: 0;
+  top: 50%;
+  z-index: 2;
+  width: 130px;
+  height: 130px;
+  margin: 0 auto;
+  position: absolute;
+  border-radius: 100%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+.vt-growth-img-wrap .item-img-video .play-icon .video_btn_border {
+  top: 0;
+  left: 0;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+  position: absolute;
+  -webkit-animation-play-state: running;
+  animation-play-state: running;
+  border: 20px solid #fff;
+  -webkit-animation: border_animation 3.9s linear 0s infinite;
+  animation: border_animation 3.9s linear 0s infinite;
+}
+.vt-growth-img-wrap .item-img-video .play-icon .video_btn_border.border_wrap-2 {
+  -webkit-animation-delay: 1.3s;
+  animation-delay: 1.3s;
+}
+.vt-growth-img-wrap .item-img-video .play-icon .video_btn_border.border_wrap-3 {
+  -webkit-animation-delay: 2.6s;
+  animation-delay: 2.6s;
+}
+.vt-growth-img-wrap .item-img-video .play-icon a {
+  z-index: 2;
+  width: 130px;
+  height: 130px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: var(--vt-title-color);
+  font-size: 16px;
+  position: relative;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 100%;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  background-color: #fff;
+}
+
+.vt-growth-counter {
+  max-width: 332px;
+}
+.vt-growth-counter .top-text {
+  margin-bottom: 45px;
+}
+.vt-growth-counter .top-text p {
+  font-size: 18px;
+}
+.vt-growth-counter .vt-about-counter:before {
+  display: none;
+}
+
+/*---------------------------------------------------- */
+/*Faq Page*/
+/*----------------------------------------------------*/
+.vt-faq-feed-section .vt-section-title {
+  max-width: 626px;
+}
+
+.vt-faq-feed-item {
+  max-width: 550px;
+  margin-bottom: 58px;
+}
+.vt-faq-feed-item:last-child {
+  margin-bottom: 0;
+}
+.vt-faq-feed-item h3 {
+  font-size: 23px;
+  padding-bottom: 14px;
+  color: var(--vt-title-color);
+}
+.vt-faq-feed-item p {
+  color: #6D6D6D;
+  font-size: 18px;
+}
+
+.vt-faq-feed-content .vt-btn a {
+  padding: 15px 110px;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-faq-feed-content .vt-btn a {
+    padding: 15px 30px;
+  }
+}
+
+.vt-faq-cta {
+  padding: 40px 0px 48px;
+  border-top: 1px solid var(--vt-title-color);
+  border-bottom: 1px solid var(--vt-title-color);
+}
+.vt-faq-cta h3 {
+  color: #5D5D5D;
+  font-size: 23px;
+  font-weight: 500;
 }
 
 /*---------------------------------------------------- */
