--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -105,6 +105,14 @@
 /*----------------------------------------------------*/
 @import "inner_page/faq-page";
 /*---------------------------------------------------- */
+/*Award Page*/
+/*----------------------------------------------------*/
+@import "inner_page/award-page";
+/*---------------------------------------------------- */
+/*Office Page*/
+/*----------------------------------------------------*/
+@import "inner_page/office";
+/*---------------------------------------------------- */
 /*Footer Section*/
 /*----------------------------------------------------*/
 @import "footer";
