--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -113,6 +113,10 @@
 /*----------------------------------------------------*/
 @import "inner_page/office";
 /*---------------------------------------------------- */
+/*Team Page*/
+/*----------------------------------------------------*/
+@import "inner_page/team";
+/*---------------------------------------------------- */
 /*Footer Section*/
 /*----------------------------------------------------*/
 @import "footer";
