--- a/assets/scss/inner_page/_team.scss
+++ b/assets/scss/inner_page/_team.scss
@@ -245,3 +245,17 @@
 		}
 	}
 }
+.vt-team-cta-content {
+	margin: 0 auto;
+	max-width: 592px;
+	.vt-section-title {
+		.subtitle {
+			background-color: #fff;
+		}
+		.section_title {
+			margin: 0 auto;
+			font-size: 32px;
+			max-width: 535px;
+		}
+	}
+}
