--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -117,6 +117,10 @@
 /*----------------------------------------------------*/
 @import "inner_page/team";
 /*---------------------------------------------------- */
+/*Team Details Page*/
+/*----------------------------------------------------*/
+@import "inner_page/team-details";
+/*---------------------------------------------------- */
 /*Footer Section*/
 /*----------------------------------------------------*/
 @import "footer";
