--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -121,6 +121,10 @@
 /*----------------------------------------------------*/
 @import "inner_page/team-details";
 /*---------------------------------------------------- */
+/*Service Page*/
+/*----------------------------------------------------*/
+@import "inner_page/service-page";
+/*---------------------------------------------------- */
 /*Footer Section*/
 /*----------------------------------------------------*/
 @import "footer";
