--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5507,6 +5507,19 @@ select:visited {
 .vt-about-section-2 {
   overflow: hidden;
 }
+.vt-about-section-2 .vt-service-pattern {
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 436px;
+}
+.vt-about-section-2 .vt-service-pattern img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
 
 .vt-about-title {
   padding-bottom: 70px;
@@ -6309,9 +6322,13 @@ select:visited {
   border: 1px solid rgb(223, 225, 229);
 }
 .vt-breadcrumb-content ul li {
+  color: #B0B0B0;
   font-size: 15px;
   margin: 0px 12px;
   position: relative;
+}
+.vt-breadcrumb-content ul li a {
+  color: var(--vt-title-color);
 }
 .vt-breadcrumb-content ul li:before {
   top: 6px;
@@ -7194,6 +7211,94 @@ select:visited {
 }
 .vt-team-detail-text .team-desc p {
   padding-bottom: 30px;
+}
+
+/*---------------------------------------------------- */
+/*Service Page*/
+/*----------------------------------------------------*/
+.vt-service-feed-top {
+  gap: 30px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.vt-service-feed-top .vt-section-title {
+  max-width: 596px;
+  padding-bottom: 10px;
+}
+.vt-service-feed-top .top-text {
+  max-width: 408px;
+}
+
+.vt-service-item-feed {
+  margin-bottom: 80px;
+}
+.vt-service-item-feed .item-img {
+  width: 384px;
+  height: 180px;
+  margin-bottom: 26px;
+}
+.vt-service-item-feed .item-img:before {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+  position: absolute;
+  mix-blend-mode: color;
+  background-color: #D9D9D9;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+.vt-service-item-feed .item-text .ser_title {
+  font-size: 23px;
+  padding-bottom: 10px;
+  color: var(--vt-title-color);
+}
+.vt-service-item-feed .item-text .ser_title a {
+  position: relative;
+  padding-bottom: 1px;
+  display: inline-block;
+}
+.vt-service-item-feed .item-text .ser_title a:before {
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 0%;
+  height: 2.5px;
+  content: "";
+  margin: 0 auto;
+  position: absolute;
+  -webkit-transition: 500ms var(--cube-1);
+  transition: 500ms var(--cube-1);
+  background-color: var(--vt-title-color);
+}
+.vt-service-item-feed .item-text .ser_title a:hover:before {
+  width: 100%;
+}
+.vt-service-item-feed .item-text p {
+  font-size: 16px;
+  line-height: 1.5;
+}
+.vt-service-item-feed .item-text .ser_btn {
+  margin-top: 25px;
+}
+.vt-service-item-feed .item-text .ser_btn a {
+  width: 100%;
+  font-size: 15px;
+  padding: 8px 15px;
+  letter-spacing: 1px;
+  display: inline-block;
+  border: 2px solid #DFE1E5;
+  background-color: #F6F6F6;
+  font-family: var(--vt-heading);
+}
+.vt-service-item-feed .item-text .ser_btn a:hover {
+  color: #C9F7CA;
+  border: 2px solid var(--vt-title-color);
+  background-color: var(--vt-title-color);
+}
+.vt-service-item-feed:hover .item-img:before {
+  opacity: 0;
 }
 
 /*---------------------------------------------------- */
