--- a/assets/scss/home_2/_about.scss
+++ b/assets/scss/home_2/_about.scss
@@ -17,6 +17,18 @@
 }
 .vt-about-section-2 {
 	overflow: hidden;
+	.vt-service-pattern {
+		top: 0;
+		left: 0;
+		z-index: -1;
+		width: 100%;
+		height: 436px;
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
 }
 .vt-about-title {
 	padding-bottom: 70px;
