--- a/assets/scss/inner_page/_breadcrumb.scss
+++ b/assets/scss/inner_page/_breadcrumb.scss
@@ -46,9 +46,13 @@
 		padding: 3px 15px 5px;
 		border: 1px solid rgba(223, 225, 229, 1);
 		li {
+			color: #B0B0B0;
 			font-size: 15px;
 			margin: 0px 12px;
 			position: relative;
+			a {
+				color: var(--vt-title-color);
+			}
 			&:before {
 				top: 6px;
 				width: 4px;
