--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -125,6 +125,10 @@
 /*----------------------------------------------------*/
 @import "inner_page/service-page";
 /*---------------------------------------------------- */
+/*Service Details Page*/
+/*----------------------------------------------------*/
+@import "inner_page/service-details";
+/*---------------------------------------------------- */
 /*Footer Section*/
 /*----------------------------------------------------*/
 @import "footer";
