--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6267,13 +6267,14 @@ select:visited {
 /*----------------------------------------------------*/
 .vt-breadcrumb-section {
   z-index: 1;
+  overflow: hidden;
 }
 .vt-breadcrumb-section:before {
   top: 0;
-  left: 0;
-  width: 100%;
+  width: 80%;
   z-index: -1;
   content: "";
+  left: -100px;
   height: 100%;
   position: absolute;
   background: -webkit-gradient(linear, left top, right top, color-stop(34.96%, rgba(255, 255, 255, 0.92)), color-stop(87.4%, rgba(255, 255, 255, 0)));
@@ -7299,6 +7300,41 @@ select:visited {
 }
 .vt-service-item-feed:hover .item-img:before {
   opacity: 0;
+}
+
+/*---------------------------------------------------- */
+/*Service Details Page*/
+/*----------------------------------------------------*/
+.vt-item-details-top-text .vt-section-title {
+  max-width: 596px;
+}
+.vt-item-details-top-text .item-top-text {
+  max-width: 488px;
+  padding-top: 28px;
+}
+
+.vt-about-counter-2.page_ver {
+  padding: 52px 0px 56px;
+  border-top: 1px solid #D9D9D9;
+  border-bottom: 1px solid #D9D9D9;
+}
+
+.vt-ser-det-item {
+  max-width: 520px;
+  margin-bottom: 52px;
+}
+.vt-ser-det-item .item-icon {
+  width: 48px;
+  height: 48px;
+  margin-right: 24px;
+}
+.vt-ser-det-item .item-text h3 {
+  font-size: 23px;
+  padding-bottom: 12px;
+  color: var(--vt-title-color);
+}
+.vt-ser-det-item .item-text p {
+  font-size: 16px;
 }
 
 /*---------------------------------------------------- */
