--- a/assets/scss/inner_page/_breadcrumb.scss
+++ b/assets/scss/inner_page/_breadcrumb.scss
@@ -1,11 +1,12 @@
 .vt-breadcrumb-section {
 	z-index: 1;
+	overflow: hidden;
 	&:before {
 		top: 0;
-		left: 0;
-		width: 100%;
+		width: 80%;
 		z-index: -1;
 		content: '';
+		left: -100px;
 		height: 100%;
 		position: absolute;
 		background: linear-gradient(90deg, rgba(255, 255, 255, 0.92) 34.96%, rgba(255, 255, 255, 0) 87.4%);
